--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <meta name="og:description" content="SANA is a startup studio dedicated to building innovative and cutting-edge web, games, mobile, IoT, and AI experiences.">
     <meta name="og:url" content="https://sanacompany.io">
     <meta name="og:site_name" content="SANA | We make your ideas true">
-    <meta name="og:image" content="/banner.png">
-    <meta name="og:image:secure_url" content="/banner.png">
+    <meta name="og:image" content="https://sanacompany.io/banner.jpg">
+    <meta name="og:image:secure_url" content="https://sanacompany.io/banner.jpg">
 
     <!-- Twitter tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="SANA | We make your ideas true">
     <meta name="twitter:description" content="SANA is a startup studio dedicated to building innovative and cutting-edge web, games, mobile, IoT, and AI experiences.">
-    <meta name="twitter:image" content="/banner.jpg">
+    <meta name="twitter:image" content="https://sanacompany.io/banner.jpg">
     <meta name="twitter:url" content="https://sanacompany.io">
 
     <!-- Single Page Apps for GitHub Pages -->
